Fix show more button alignment on profile page

--- a/resources/css/bem/show-more-link.less
+++ b/resources/css/bem/show-more-link.less
@@ -74,6 +74,10 @@
     position: sticky;
     bottom: 5px;
     margin: 5px auto 0;
+
+    @media @desktop {
+      grid-column: span 2;
+    }
   }
 
   &[data-disabled="1"],
